--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,36 +1,16 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-        <h:outputStylesheet name="css/jsfcrud.css"/>
-    </h:head>
-    <h:body>
-        Hello from Facelets
-        <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
-        <br />
-        <h:link outcome="/edits/category/List" value="Show All Category Items"/>
-        <br />
-        <h:link outcome="/edits/institution/List" value="Show All Institution Items"/>
-        <br />
-        <h:link outcome="/edits/person/List" value="Show All Person Items"/>
-        <br />
-        <h:link outcome="/edits/record/List" value="Show All Record Items"/>
-        <br />
-        <h:link outcome="/edits/speciality/List" value="Show All Speciality Items"/>
-        <br />
-        <h:link outcome="/edits/unit/List" value="Show All Unit Items"/>
-        <br />
-        <h:link outcome="/edits/ward/List" value="Show All Ward Items"/>
-    </h:body>
+<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
+                template="./template.xhtml">
 
+    
 
+    <ui:define name="right">
+        right
+    </ui:define>
 
+    <ui:define name="content">
+        content
+    </ui:define>
 
-
-
-
-</html>
-
+</ui:composition>
