--- a/src/main/webapp/admin_index.xhtml
+++ b/src/main/webapp/admin_index.xhtml
@@ -1,14 +1,16 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-        <h:outputStylesheet name="css/jsfcrud.css"/>
-    </h:head>
-    <h:body>
-        Hello from Facelets
-        <br />
+<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
+                template="./template.xhtml"
+                xmlns:h="http://java.sun.com/jsf/html">
+
+
+
+    <ui:define name="right">
+        right
+    </ui:define>
+
+    <ui:define name="content">
         <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
         <br />
         <h:link outcome="/edits/category/List" value="Show All Category Items"/>
@@ -24,13 +26,6 @@
         <h:link outcome="/edits/unit/List" value="Show All Unit Items"/>
         <br />
         <h:link outcome="/edits/ward/List" value="Show All Ward Items"/>
-    </h:body>
+    </ui:define>
 
-
-
-
-
-
-
-</html>
-
+</ui:composition>
